fix overflow fr

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,9 +31,3 @@ html {
 html, body {
   overflow-x: hidden;
 }
-
-@media (max-width: 768px) {
-  html, body {
-    overflow-x: hidden;
-  }
-}
